Summary of Work: * Adding /New route that uses the Create.jsx page to display all possible monsters with search functionality. * Page.jsx template for all future pages.
Known Issues:
* No main landing page.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,11 +4,23 @@
   text-align: center;
   color: $primary-text;
   
+  .layout{
   // Setting up grid layout
   display: grid;
   grid-template-areas: $grid-template-areas;
   grid-template-columns: $grid-template-columns;
   grid-template-rows: $grid-template-rows;
-  min-height: 100vh;
+  height: 100vh;
+  }
 
+  .page {
+    grid-area: main-center;
+    background-color: $secondary-color;
+    height: calc(100vh - 2* #{$navbar-height  });
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+  }
 }
+
+
