--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -6,6 +6,7 @@ $secondary-text: black;
 // NAVBAR VARIABLES
 $navbar-height: 3rem;
 
+// Setting up Grid
 $grid-template-areas:
 'top-left top-center top-right'
 'main-left main-center main-right'
