--- a/src/styles/SearchBar.scss
+++ b/src/styles/SearchBar.scss
@@ -3,4 +3,6 @@
   background-color: white;
   line-height: 2rem;
   padding: 1rem;
+  box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.33) inset;
+  border-radius: 0.4rem; 
 }
