Summary of Work: *Added Carousel component so that encounter runs in a carousel *Worked on Player component by adding styling and unconscious checbox *Added round counter to encounter so dm can keep track- could improve this by adding a round "timer" for certain duration effects
Todo:
*Monster tile needs to be formatted to display all the relevant info
*HP modifier component needs to be made

--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -1,9 +1,9 @@
 @import "vars";
+.button{
+  float: none;
+}
 
-.player-container {
-  grid-area: main-center;
-  height: auto;
-  width: -webkit-fill-available;
-  background-color: $secondary-color;
-  align-items: center;
+.unconscious-label{
+  float: right;
+  margin: 10px;
 }
