Added Home, Party, BuildParty, and Encounters Screens
Summary of Work:
* Created an index page called Home as the landing page for app.
* Created a 'Your Parties' page that displays user's saved parties.
* Created a (dummy) 'Your Encounters' page that displays user's save encounters.
* Created a 'New Party' page that lets user create a new party.
* Hooked up all pages with the respective routes/links.
* Refactored the 'AddPlayerForm' into its own component.
* Some styling and layout fixes, as well as a less saturated color scheme.

Known Issues:
* No testing.
* 'Your Encounters' page has no useful information as of now.

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -5,11 +5,27 @@
   height: $navbar-height;
   background-color: $primary-color;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  box-shadow: 0 3px 3px rgba(0,0,0,0.4), 0 6px 12px rgba(0,0,0,0.2);
+  z-index: 1;
 
-  .nav-button {
-    padding: 0.5rem;
+  .navbar-box {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+
+    &:first-child {
+      justify-content: start;
+    }
+
+    &:last-child {
+      justify-content: end;
+    }
+
+
+    .nav-button {
+      padding: 0.5rem;
+    }
   }
 }
 
