--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,15 +11,38 @@
   grid-template-columns: $grid-template-columns;
   grid-template-rows: $grid-template-rows;
   height: 100vh;
+  position: relative;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: radial-gradient(lighten($global-backdrop, 20), $global-backdrop);
+      z-index: -1;  
+    }
   }
 
   .page {
     grid-area: main-center;
-    background-color: $secondary-color;
+    background: $secondary-color;
     height: calc(100vh - 2* #{$navbar-height  });
     overflow: auto;
     display: flex;
     flex-direction: column;
+    z-index: 0;
+  }
+
+  a, a:visited {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
   }
 }
 
