--- a/src/styles/BottomNavbar.scss
+++ b/src/styles/BottomNavbar.scss
@@ -7,4 +7,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  box-shadow: 0 -3px 3px rgba(0,0,0,0.4), 0 -6px 12px rgba(0,0,0,0.2);
+  z-index: 1;
 }
