--- a/src/styles/PlayerSelection.scss
+++ b/src/styles/PlayerSelection.scss
@@ -7,15 +7,7 @@
   margin: auto;
   background: $primary-color;
 }
-.button{
-  background-color: $secondary-color;
-  color: $primary-text;
-  border: none;
-  padding: 5px 5px;
-  text-align: center;
-  display: inline-block;
-  font-size: 14px;
-  margin-left: 5px;
-  float: right;
-  margin-right: 5px;
+
+button {
+  align-self: center;
 }
