--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -14,3 +14,5 @@ $grid-template-areas:
 'bottom-left bottom-center bottom-right';
 $grid-template-columns: 20% auto 20%;
 $grid-template-rows: $navbar-height auto $navbar-height;
+
+$border-radius: 0.2rem;
