--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -16,11 +16,10 @@
 
   #monster-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 10rem);
+    grid-template-columns: repeat(auto-fit, 10rem);
     grid-auto-rows: 10rem;
-    justify-content: space-around;
-    align-content: start;
-    grid-row-gap: 1rem;
+    justify-content: center;
+    grid-gap: 0.5rem;
     overflow-y: auto;
   }
   
