--- a/src/styles/ModalDialog.scss
+++ b/src/styles/ModalDialog.scss
@@ -5,8 +5,9 @@
   right: 0;
   bottom: 0;
   background: rgba(0,0,0,0.6);
+  z-index: 1;
 
-  > * {
+  > .children-wrapper {
     position: absolute;
     left: 50%;
     top: 50%;
