--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,15 +4,15 @@
   text-align: center;
   color: $primary-text;
   font-family: 'Open Sans', sans-serif;
-  
-  .layout{
-  // Setting up grid layout
-  display: grid;
-  grid-template-areas: $grid-template-areas;
-  grid-template-columns: $grid-template-columns;
-  grid-template-rows: $grid-template-rows;
-  height: 100vh;
-  position: relative;
+
+  .layout {
+    // Setting up grid layout
+    display: grid;
+    grid-template-areas: $grid-template-areas;
+    grid-template-columns: $grid-template-columns;
+    grid-template-rows: $grid-template-rows;
+    height: 100vh;
+    position: relative;
 
     &:after {
       content: '';
@@ -22,23 +22,41 @@
       left: 0;
       right: 0;
       background: radial-gradient(lighten($global-backdrop, 20), $global-backdrop);
-      z-index: -1;  
+      z-index: -1;
+    }
+
+    .page {
+      position: relative;
+      grid-area: main-center;
+      background: $secondary-color;
+      height: calc(100vh - 2* #{$navbar-height});
+      overflow: auto;
+      display: flex;
+      flex-direction: column;
+      z-index: 0;
+      box-shadow: 0 0 5rem rgba(0, 0, 0, 0.8);
+    }
+
+    .left-side-bar {
+      grid-area: main-left;
+      align-self: center;
+      justify-self: flex-end;
+      z-index: 1;
+    }
+
+    .right-side-bar {
+      grid-area: main-right;
+      align-self: center;
+      justify-self: flex-start;
+      z-index: 1;
     }
   }
 
-  .page {
-    position: relative;
-    grid-area: main-center;
-    background: $secondary-color;
-    height: calc(100vh - 2* #{$navbar-height});
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-    z-index: 0;
-    box-shadow: 0 0 5rem rgba(0,0,0,0.8);
-  }
 
-  a, a:visited, a:active {
+
+  a,
+  a:visited,
+  a:active {
     color: inherit;
     text-decoration: none;
     outline: none;
@@ -68,7 +86,8 @@
     background-color: $secondary-color;
   }
 
-  input, input:focus {
+  input,
+  input:focus {
     border-radius: $border-radius;
     border: none;
     outline: none;
@@ -89,11 +108,11 @@
     font-weight: 900;
   }
 
-  h1,h2,h3 {
+  h1,
+  h2,
+  h3 {
     margin: 0;
     padding: 0;
     font-family: 'Carrois Gothic SC', sans-serif;
   }
 }
-
-
