--- a/src/styles/AddPlayerForm.scss
+++ b/src/styles/AddPlayerForm.scss
@@ -1,12 +1,30 @@
+@import './vars';
+
 .add-player-form {
+  background-color: $secondary-color;
+  padding: 1rem;
+
   input {
     display: block;
     line-height: 2rem;
-    padding: 0.5rem;
+    padding: 1rem;
     margin-bottom: 0.2rem;
     width: 100%;
   }
 
+  .ac-icon {
+    content: url('../images/armor.svg');
+    height: $normal;
+    vertical-align: middle;
+    padding-right: 0.4rem;
+  }
+
+  .init-icon {
+    content: url('../images/initiative.svg');
+    height: $normal;
+    vertical-align: middle;
+    padding-right: 0.4rem;
+  }
   button:nth-of-type(2) {
     margin-left: 0.2rem;
   }
