Summary of Work: *Completed encounter sidebar that displays relevant info to dm for characters when it is not their turn *Created round counter to go in other sidebar - not implemented yet
Known Issues:
*horizontal lines in dm sidebar disappear when scrolling, unconscious
checkboxes also disappear sometimes, problem goes away if lines are
removed-WHY
*right sidebar only visible if theres a component for it. otherwise
disappears
*sidebars disappear completely or behave weirdly when window is made
smaller

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,8 +39,9 @@
 
     .left-side-bar {
       grid-area: main-left;
-      align-self: center;
+      /*align-self: center;*/
       justify-self: flex-end;
+      overflow-y: scroll;
       z-index: 1;
     }
 
