--- a/src/styles/DmSidebar.scss
+++ b/src/styles/DmSidebar.scss
@@ -1,5 +1,9 @@
 @import 'vars';
 
 .dm-sidebar {
-  grid-area: main-left!important;
+text-align: left;
+}
+.hr {
+  color: white;
+  width: auto;
 }
