--- a/src/styles/ModalDialog.scss
+++ b/src/styles/ModalDialog.scss
@@ -5,12 +5,9 @@
   right: 0;
   bottom: 0;
   background: rgba(0,0,0,0.8);
-  z-index: 1;
-
-  > .children-wrapper {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  }
+  z-index: 99;
+  overflow: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
