--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -31,4 +31,28 @@
       background-color: white;
     }
   }
+
+  .spinner {
+    fill: transparent;
+    stroke: $primary-color;
+    stroke-width: 3px;
+    stroke-dasharray: calc(1.5 * 3.14 * 25) calc(3.14 * 25 * 0.5);
+    animation: rot 2s linear infinite;
+    transform-origin: 50% 50%;
+  }
+
+  .spinner-inner {
+    fill: transparent;
+    stroke: $primary-color;
+    stroke-width: 3px;
+    stroke-dasharray: calc(1.5 * 3.14 * 15) calc(3.14 * 15 * 0.5);
+    animation: rot 2s linear infinite reverse;
+    transform-origin: 50% 50%;
+  }
+
+  // g {
+  //   animation: rot 1s linear infinite;
+  // }
+
+  @keyframes rot { to { transform: rotate(1turn);} }
 }
