Added Next button at top of page during combat, end combat button in header Summary of Work: * added and styled a Next button in top right corner so you can progress  combat from top or bottom of page * added End Combat in header which for now takes you back to the home page * could not replicate resizing issue, could have been a one time fluke on  my machine
TODO:
*remove monsters from combat once they reach 0 hit points
* test process from start to end and look for bugs

--- a/src/styles/Carousel.scss
+++ b/src/styles/Carousel.scss
@@ -1,5 +1,11 @@
 @import "vars";
 
 .round-tracker{
-  text-align: center;
+  align-items: center;
+  display: flex;
+}
+
+.round-title{
+  flex: 1 1;
+  margin-left: 70px!important;
 }
