Changed initiative input and fixed styling on player selection page
Summary of work:
*made text in the header slightly smaller so Your Encounter fit on one
line
*changed initiative input from range picker to number input
*added validation to ensure player has an initiative
*fixed player card styling so that info is contained within card
* modified delete button to x to be less intrusive

TODO
* make sure error handling is consisten through entire flow
* monster abilities need to be displayed better
* make sure monsters have been selected before being allowed to move on
* check player selection behaviour when you hit Back

--- a/src/styles/AddPlayerForm.scss
+++ b/src/styles/AddPlayerForm.scss
@@ -12,6 +12,11 @@
     width: 100%;
   }
 
+  #init-picker {
+    width: 13%;
+    margin: 0.5rem 0 0.5rem 43.5%;
+  }
+
   .ac-icon {
     content: url('../images/armor.svg');
     height: $normal;
