--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -22,7 +22,9 @@
       justify-content: flex-end;
     }
 
-
+    h2 {
+      font-size: 1.5rem;
+    }
     .nav-button {
       padding: 1rem;
       font-weight: bold;
@@ -30,4 +32,3 @@
     }
   }
 }
-
