Improved monster tile information display.
Summary of work:
*added a grid to the carousel component which is responsible for the
layout of the entire main page (minus sidebars, header, and footer)
*added a grid to monster tile specifically (which is nested within
Carousel's grid) to handle the layout of the monster tile specific info
like attributes, abilities, traits, and HP
*added a grid to monster actions (nested in Carousel and Monster tile's
grids) which controls the layout for the monsters actions which include
regular actions, legendary actions, and any extra passive actions
*changed the structure of a lot of the components that needed to go within
the grid so that they would be direct descendants of the component
managing the grid
*added a style sheet specifically for styling monster actions, all other
aspects of monster tiles are styled by monster.scss

TODO:
*add ability for monster list to be reloaded without needing to refresh
the page

--- a/src/styles/Monster.scss
+++ b/src/styles/Monster.scss
@@ -1,6 +1,52 @@
 @import "vars";
 
+.carousel{
+      .monster-tile{
+      // Setting up grid layout
+      display: grid;
+      grid-template-areas:
+      '. header .'
+      'top-left top-center top-right'
+      ' . trait-area .'
+      '.  action-center .';
+      grid-template-columns:  1fr 2fr 2fr;
+      grid-template-rows: auto auto auto auto;
+    }
+}
+
 .important-text {
   color: black;
   font-weight: bold;
+}
+
+.monster-info{
+  grid-area: header;
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.monster-abilities{
+  grid-area: top-left;
+}
+.monster-attributes{
+  grid-area: top-center;
+  text-align: left;
+  margin: auto;
+}
+.hp-container{
+  grid-area: top-right;
+  margin: auto;
+}
+
+.monster-traits{
+  grid-area: trait-area;
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.actions-container{
+  grid-area: action-center;
+  grid-column-start: 1;
+  grid-column-end: 4;
+
 }
