--- a/src/styles/Carousel.scss
+++ b/src/styles/Carousel.scss
@@ -1,11 +1,44 @@
 @import "vars";
 
-.round-tracker{
-  align-items: center;
-  display: flex;
+.carousel{
+  // Setting up grid layout
+  display: grid;
+  grid-template-areas:
+  '. top-center top-right'
+  '. main-center .'
+  '.  bottom-center .';
+  grid-template-columns:  1fr 2fr 1fr;
+  grid-template-rows: 50px auto 50px;
 }
 
 .round-title{
   flex: 1 1;
   margin-left: 70px!important;
+  grid-area:top-center;
+  margin: auto!important;
+}
+
+.round-button{
+  grid-area: top-right;
+  height: fit-content;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.round-button-bottom{
+  grid-area: bottom-center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.player-tile{
+  grid-area: main-center;
+  margin-right: auto;
+  margin-left: auto;
+}
+.monster-tile{
+  grid-area: main-center;
+  grid-column-start: 1;
+  grid-column-end: 4;
 }
