Added ability to reload monster list without having to reload page.
Summary of work:
*added ac and init icons throughout project
*condensed player card display
*removed "back" option from Encounter manager since it doesn't make sense
to have that be part of the flow, you should only be able to exit a combat
once you enter it, not go back to player selection
*added reload monsters button to error message that is displayed if an
error occurs during the monsters fetch.
* refactored fetch so it can be called by multiple functions
*handled changes to loading and isError properties for new functionality

TODO
* need to ensure you can't move past monster selection without selecting
 any monsters

--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  
+
   #title {
     background: none;
     line-height: 3rem;
@@ -49,7 +49,9 @@
     animation: rot 2s linear infinite reverse;
     transform-origin: 50% 50%;
   }
-
+  .reload-monsters{
+    margin-top: 50px;
+  }
   // g {
   //   animation: rot 1s linear infinite;
   // }
