--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -66,4 +66,27 @@
     padding: 0;
     font-family: 'Carrois Gothic SC', sans-serif;
   }
+
+
+    .ac-icon {
+      content: url('../images/armor.svg');
+      height: $normal;
+      vertical-align: middle;
+      padding-right: 0.4rem;
+    }
+
+    .init-icon {
+      content: url('../images/initiative.svg');
+      height: $normal;
+      vertical-align: middle;
+      padding-right: 0.4rem;
+    }
+    input[type='number'] {
+        -webkit-appearance:textfield;
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+    }
 }
