--- a/src/styles/PlayerSelection.scss
+++ b/src/styles/PlayerSelection.scss
@@ -34,4 +34,16 @@
   button {
     align-self: center;
   }
+
+  #party-player-init{
+    width: 40px;
+    height: 30px;
+    text-align: center;
+  }
+
+  .enter-inits {
+      button {
+            margin-top: 10px;
+      }
+  }
 }
