Cleaned up and refactored code
Summary of work:
*went through all components and pages to clean out code and refactor
things where possible
*made minor styling changes to player tiles
*went through project and tried to eleiminate as many compiler warnings as
possible

--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -3,7 +3,9 @@
   float: none;
 }
 
-.unconscious-label{
-  float: right;
-  margin: 10px;
-}
+  .player-tile{
+    grid-area: main-center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 10px;
+  }
